--- a/PDS_Graded Assignment-1.ipynb
+++ b/PDS_Graded Assignment-1.ipynb
@@ -23,12 +23,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Import required libraries and read the dataset\n",
+    "# Import libraries\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "\n",
+    "# Read the dataset\n",
     "fifa_df = pd.read_csv('fifa.csv')"
    ]
   },
@@ -177,7 +178,7 @@
    "id": "4cb08b35-af26-4e97-8f59-3a4e25c3271a",
    "metadata": {},
    "source": [
-    "3. Drop the columns which you think redundant for the analysis. (1 point)\n",
+    "3. Drop the columns which you think redundant for the analysis.\n",
     "[Hint: columns like 'Photo','Flag','Club Logo'}"
    ]
   },
