--- a/PDS_Graded Assignment-1.ipynb
+++ b/PDS_Graded Assignment-1.ipynb
@@ -13,7 +13,7 @@
    "id": "352db901-a8df-4578-b8df-cd398e10b679",
    "metadata": {},
    "source": [
-    "1. Import the required libraries and read the dataset."
+    "## 1. Import the required libraries and read the dataset."
    ]
   },
   {
@@ -38,7 +38,7 @@
    "id": "ed85ef7e-e022-4090-8a4f-7382ed009c9b",
    "metadata": {},
    "source": [
-    "2. Check the first few samples, shape, info of the data and try to familiarize yourself with different features."
+    "## 2. Check the first few samples, shape, info of the data and try to familiarize yourself with different features."
    ]
   },
   {
@@ -178,8 +178,8 @@
    "id": "4cb08b35-af26-4e97-8f59-3a4e25c3271a",
    "metadata": {},
    "source": [
-    "3. Drop the columns which you think redundant for the analysis.\n",
-    "[Hint: columns like 'Photo','Flag','Club Logo'}"
+    "## 3. Drop the columns which you think redundant for the analysis. \n",
+    "### [Hint: columns like 'Photo','Flag','Club Logo'}"
    ]
   },
   {
@@ -207,12 +207,10 @@
    "id": "e072da61-74b5-4c2e-a732-65d864da4020",
    "metadata": {},
    "source": [
-    "4. Convert the columns \"Value\", \"Wage\", \"Release Clause\" to float datatype\n",
-    "after getting rid of currency symbol and suffix. (6 points)\n",
-    "- Note: When the record/entry has \"M\"(indicates millions) as suffix you\n",
-    "need to multiply that value with 1000000\n",
-    "- When the record/entry has \"K\"(indicates thousands) as suffix you\n",
-    "need to multiply that value with 1000"
+    "## 4. Convert the columns \"Value\", \"Wage\", \"Release Clause\" to float datatype after getting rid of currency symbol and suffix.\n",
+    "\n",
+    "### - Note: When the record/entry has \"M\"(indicates millions) as suffix you need to multiply that value with 1000000\n",
+    "### - When the record/entry has \"K\"(indicates thousands) as suffix you need to multiply that value with 1000\n"
    ]
   },
   {
@@ -243,8 +241,7 @@
    "id": "a8a349c9-fec4-4e11-a170-26b87caddd49",
    "metadata": {},
    "source": [
-    "5. Convert the column \"Joined\" into integer data type with keeping only the\n",
-    "year. (2 points)"
+    "## 5. Convert the column \"Joined\" into integer data type with keeping only the year. (2 points)"
    ]
   },
   {
@@ -262,7 +259,7 @@
    "id": "375c7cec-f8b2-41c8-b8ff-c50c24038bb8",
    "metadata": {},
    "source": [
-    "6. Convert the column \"Contract Valid Until\" to pandas datetime type. (2 points)"
+    "## 6. Convert the column \"Contract Valid Until\" to pandas datetime type. (2 points)"
    ]
   },
   {
@@ -295,7 +292,7 @@
    "id": "39b5ba27-b280-423a-83eb-37a2976c3726",
    "metadata": {},
    "source": [
-    "7. The column 'Height' is in inches with a quotation mark, Convert to float with decimal points. "
+    "## 7. The column 'Height' is in inches with a quotation mark, Convert to float with decimal points. "
    ]
   },
   {
@@ -337,7 +334,7 @@
    "id": "3fbc9d3c-7f99-48bd-a928-a43aff47a55b",
    "metadata": {},
    "source": [
-    "8. The column \"Weight\" has the suffix as lbs, remove the suffix and convert to float."
+    "## 8. The column \"Weight\" has the suffix as lbs, remove the suffix and convert to float."
    ]
   },
   {
@@ -356,8 +353,7 @@
    "id": "74fba065-06df-4f96-beef-fd9d8b206189",
    "metadata": {},
    "source": [
-    "9. Check for the percentage of missing values and impute them with\n",
-    "appropriate imputation techniques. "
+    "## 9. Check for the percentage of missing values and impute them with appropriate imputation techniques. "
    ]
   },
   {
@@ -443,8 +439,7 @@
    "id": "a81e829a-a3c6-489e-9f5e-bab1b75dbaaf",
    "metadata": {},
    "source": [
-    "10. Plot the distribution of Overall rating for all the players and write your\n",
-    "findings. "
+    "## 10. Plot the distribution of Overall rating for all the players and write your findings. "
    ]
   },
   {
@@ -479,7 +474,7 @@
    "id": "4f395ea3-e211-4ea0-abf7-cec5a49d678d",
    "metadata": {},
    "source": [
-    "11. Retrieve the names of top20 players based on the Overall rating."
+    "## 11. Retrieve the names of top20 players based on the Overall rating."
    ]
   },
   {
@@ -507,8 +502,7 @@
    "id": "49554ca6-7328-4654-b570-e02cba2c689d",
    "metadata": {},
    "source": [
-    "12. Generate a dataframe which should include all the information of the\n",
-    "Top 20 players based on the Overall rating."
+    "## 12. Generate a dataframe which should include all the information of the Top 20 players based on the Overall rating."
    ]
   },
   {
@@ -527,8 +521,7 @@
    "id": "1a3912ec-b2e2-427a-bf04-59106df611e5",
    "metadata": {},
    "source": [
-    "13. What is the average \"Age\" and \"Wage\" of these top 20 players? (use\n",
-    "the data frame created in the question 11)"
+    "## 13. What is the average \"Age\" and \"Wage\" of these top 20 players? (use the data frame created in the question 11)"
    ]
   },
   {
@@ -559,8 +552,7 @@
    "id": "bff1bcf9-e5c5-4bc3-a217-c99274d3b52b",
    "metadata": {},
    "source": [
-    "14. Among the top 20 players based on the Overall rating, which player has\n",
-    "the highest wage? Display the name of the player with his wage. "
+    "## 14. Among the top 20 players based on the Overall rating, which player has the highest wage? Display the name of the player with his wage. "
    ]
   },
   {
@@ -590,10 +582,10 @@
    "id": "fc4644cd-3ff9-4c85-8325-d290b91d19c2",
    "metadata": {},
    "source": [
-    "15. Generate a dataframe which should include the \"Player name\", \"Club\n",
-    "Name\", \"Wage\", and 'Overall rating'.\n",
-    "i) find the average Overall rating for each club.\n",
-    "ii) Display the average overall rating of Top10 Clubs using a plot"
+    "## 15. Generate a dataframe which should include the \"Player name\", \"Club Name\", \"Wage\", and 'Overall rating'.\n",
+    "\n",
+    "### i) find the average Overall rating for each club.\n",
+    "### ii) Display the average overall rating of Top10 Clubs using a plot"
    ]
   },
   {
@@ -635,9 +627,7 @@
    "id": "72c7501e-35ce-4a24-a197-35ab22b247f2",
    "metadata": {},
    "source": [
-    "16. What is the relationship between age and individual potential of the\n",
-    "player? Visualize the relationship with appropriate plot and Comment on\n",
-    "the same. "
+    "## 16. What is the relationship between age and individual potential of the player? Visualize the relationship with appropriate plot and Comment on the same. "
    ]
   },
   {
@@ -670,9 +660,9 @@
    "id": "b2f6b78c-8909-4263-b3bc-5a60420f6f8e",
    "metadata": {},
    "source": [
-    "17. Which features directly contribute to the wages of the players?\n",
-    "Support your answer with a plot and a metric.(hint: use\n",
-    "potential, Overall, value, international reputation, and Release Clause)"
+    "## 17. Which features directly contribute to the wages of the players? Support your answer with a plot and a metric.\n",
+    "\n",
+    "### (hint: use potential, Overall, value, international reputation, and Release Clause)"
    ]
   },
   {
@@ -707,9 +697,7 @@
    "id": "5b5f67a6-2d09-4a05-8cd2-73270b4625b8",
    "metadata": {},
    "source": [
-    "18. Find the position in the pitch where the maximum number of players\n",
-    "play and the position where the minimum number of players play? Display\n",
-    "it using a plot. "
+    "### 18. Find the position in the pitch where the maximum number of players play and the position where the minimum number of players play? Display it using a plot. "
    ]
   },
   {
@@ -748,8 +736,7 @@
    "id": "47772e86-ff81-43ba-9c4f-b09dd81c6473",
    "metadata": {},
    "source": [
-    "19. How many players are from the club 'Juventus' and the wage is greater\n",
-    "than 200K? Display all the information of such players."
+    "## 19. How many players are from the club 'Juventus' and the wage is greater than 200K? Display all the information of such players."
    ]
   },
   {
@@ -783,8 +770,7 @@
    "id": "55e77115-dc09-4767-8c8d-1a77f5925b65",
    "metadata": {},
    "source": [
-    "20. Generate a data frame containing top 5 players by Overall rating for\n",
-    "each unique position."
+    "## 20. Generate a data frame containing top 5 players by Overall rating for each unique position."
    ]
   },
   {
@@ -920,8 +906,9 @@
    "id": "9f9ebd0b-a2a1-4a26-aa5e-895d0781f6b3",
    "metadata": {},
    "source": [
-    "21. What is the average wage one can expect to pay for the top 5 players\n",
-    "in every position? (use the data frame created in Q19)"
+    "## 21. What is the average wage one can expect to pay for the top 5 players in every position? \n",
+    "\n",
+    "### (use the data frame created in Q19)"
    ]
   },
   {
