--- a/PDS_Graded Assignment-1.ipynb
+++ b/PDS_Graded Assignment-1.ipynb
@@ -168,6 +168,7 @@
    ],
    "source": [
     "# Samples, shape, info of the data\n",
+    "\n",
     "print(fifa_df.head())\n",
     "print(f\"Shape of the dataset: {fifa_df.shape}\")\n",
     "print(fifa_df.info())"
@@ -190,6 +191,7 @@
    "outputs": [],
    "source": [
     "# Drop redundant columns\n",
+    "\n",
     "columns_to_drop = ['Photo', 'Flag', 'Club Logo']\n",
     "fifa_df = fifa_df.drop(columns=columns_to_drop)"
    ]
@@ -221,6 +223,7 @@
    "outputs": [],
    "source": [
     "# Convert \"Value\", \"Wage\", \"Release Clause\" to float\n",
+    "\n",
     "def convert_currency(value):\n",
     "    if isinstance(value, str):\n",
     "        value = value.replace('€', '').replace('M', '').replace('K', '')\n",
@@ -251,6 +254,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Convert \"Joined\" column into integer data type\n",
+    "\n",
     "fifa_data['Joined'] = pd.to_datetime(fifa_data['Joined']).dt.year"
    ]
   },
@@ -282,6 +287,8 @@
     }
    ],
    "source": [
+    "# Convert \"Contract Valid Untill\" to pandas datetime type\n",
+    "\n",
     "fifa_df['Contract Valid Until'] = pd.to_datetime(fifa_df['Contract Valid Until'], format='mixed', dayfirst=False, errors='coerce')\n",
     "\n",
     "print(fifa_df['Contract Valid Until'].head())"
@@ -316,13 +323,14 @@
    ],
    "source": [
     "# Convert 'Height' to float in inches\n",
+    "\n",
     "def height_to_inches(height_str):\n",
     "    if isinstance(height_str, str):\n",
     "        parts = height_str.replace('\"', '').split(\"'\")\n",
     "        feet = int(parts[0])\n",
     "        inches = int(parts[1]) if len(parts) > 1 else 0\n",
     "        return feet * 12 + inches\n",
-    "    return height_str  # Return as-is if it's not a string (e.g., NaN)\n",
+    "    return height_str\n",
     "\n",
     "fifa_df['Height'] = fifa_df['Height'].apply(height_to_inches).astype(float)\n",
     "\n",
@@ -345,6 +353,7 @@
    "outputs": [],
    "source": [
     "# Convert 'Weight' to float\n",
+    "\n",
     "fifa_df['Weight'] = fifa_df['Weight'].str.replace('lbs', '').astype(float)"
    ]
   },
@@ -423,6 +432,7 @@
    "source": [
     "# Percentage of missing values\n",
     "missing_percentages = (fifa_df.isnull().sum() / len(fifa_df) * 100).sort_values(ascending=False)\n",
+    "\n",
     "print(\"Percentage of missing values:\")\n",
     "print(missing_percentages[missing_percentages > 0])\n",
     "\n",
@@ -461,6 +471,7 @@
    ],
    "source": [
     "# Plot distribution of Overall rating\n",
+    "\n",
     "plt.figure(figsize=(10, 6))\n",
     "sns.histplot(fifa_df['Overall'], kde=True)\n",
     "plt.title('Distribution of Overall Rating')\n",
@@ -493,7 +504,9 @@
    ],
    "source": [
     "# Names of top 20 players based on Overall rating\n",
+    "\n",
     "top_20_players = fifa_df.nlargest(20, 'Overall')['Name'].tolist()\n",
+    "\n",
     "print(\"Top 20 players:\", top_20_players)"
    ]
   },
@@ -513,6 +526,7 @@
    "outputs": [],
    "source": [
     "# Dataframe with all information of top 20 players\n",
+    "\n",
     "top_20_df = fifa_df.nlargest(20, 'Overall')"
    ]
   },
@@ -541,8 +555,10 @@
    ],
    "source": [
     "# Average Age and Wage of top 20 players\n",
+    "\n",
     "avg_age = top_20_df['Age'].mean()\n",
     "avg_wage = top_20_df['Wage'].mean()\n",
+    "\n",
     "print(f\"Average Age of top 20 players: {avg_age:.2f}\")\n",
     "print(f\"Average Wage of top 20 players: {avg_wage:.2f}\")"
    ]
@@ -572,7 +588,9 @@
    ],
    "source": [
     "# Player with highest wage among top 20\n",
+    "\n",
     "highest_wage_player = top_20_df.loc[top_20_df['Wage'].idxmax()]\n",
+    "\n",
     "print(f\"Player with highest wage among top 20: {highest_wage_player['Name']}\")\n",
     "print(f\"Wage: {highest_wage_player['Wage']}\")"
    ]
@@ -612,7 +630,7 @@
     "# i) Average Overall rating for each club\n",
     "club_avg_rating = club_df.groupby('Club')['Overall'].mean().sort_values(ascending=False)\n",
     "\n",
-    "# ii) Plot average overall rating of Top 10 Clubs\n",
+    "# ii) Average overall rating of Top 10 Clubs Plot\n",
     "plt.figure(figsize=(12, 6))\n",
     "club_avg_rating.head(10).plot(kind='bar')\n",
     "plt.title('Average Overall Rating of Top 10 Clubs')\n",
@@ -649,6 +667,7 @@
    ],
    "source": [
     "# Relationship between age and potential\n",
+    "\n",
     "plt.figure(figsize=(10, 6))\n",
     "sns.scatterplot(data=fifa_df, x='Age', y='Potential')\n",
     "plt.title('Age vs Potential')\n",
@@ -684,6 +703,7 @@
    ],
    "source": [
     "# Features contributing to wages\n",
+    "\n",
     "wage_features = ['Potential', 'Overall', 'Value', 'International Reputation', 'Release Clause']\n",
     "correlation_matrix = fifa_df[wage_features + ['Wage']].corr()\n",
     "plt.figure(figsize=(10, 8))\n",
@@ -719,6 +739,7 @@
    ],
    "source": [
     "# Position with maximum and minimum number of players\n",
+    "\n",
     "position_counts = fifa_df['Position'].value_counts()\n",
     "max_position = position_counts.index[0]\n",
     "min_position = position_counts.index[-1]\n",
@@ -760,6 +781,7 @@
    ],
    "source": [
     "# Players from Juventus with wage greater than 200K\n",
+    "\n",
     "juventus_players = fifa_df[(fifa_df['Club'] == 'Juventus') & (fifa_df['Wage'] > 200000)]\n",
     "print(f\"Number of Juventus players with wage greater than 200K: {len(juventus_players)}\")\n",
     "print(juventus_players)"
@@ -775,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 58,
    "id": "efe9256e-3906-4ab1-8857-fe2601364e04",
    "metadata": {},
    "outputs": [
@@ -783,114 +805,81 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "        ID               Name  Age  \\\n",
-      "0   158023           L. Messi   31   \n",
-      "1    20801  Cristiano Ronaldo   33   \n",
-      "2   190871          Neymar Jr   26   \n",
-      "3   193080             De Gea   27   \n",
-      "4   176580          L. Suárez   31   \n",
-      "5   192985       K. De Bruyne   27   \n",
-      "6   155862       Sergio Ramos   32   \n",
-      "7   183277          E. Hazard   27   \n",
-      "8   177003          L. Modrić   32   \n",
-      "9   182493           D. Godín   32   \n",
-      "10  188545     R. Lewandowski   29   \n",
-      "11  200389           J. Oblak   25   \n",
-      "12  182521           T. Kroos   28   \n",
-      "13  168542        David Silva   32   \n",
-      "14  215914           N. Kanté   27   \n",
+      "        ID               Name  Age Nationality  Overall  Potential  \\\n",
+      "0   158023           L. Messi   31   Argentina       94         94   \n",
+      "1    20801  Cristiano Ronaldo   33    Portugal       94         94   \n",
+      "2   190871          Neymar Jr   26      Brazil       92         93   \n",
+      "3   193080             De Gea   27       Spain       91         93   \n",
+      "4   176580          L. Suárez   31     Uruguay       91         91   \n",
+      "5   192985       K. De Bruyne   27     Belgium       91         92   \n",
+      "6   155862       Sergio Ramos   32       Spain       91         91   \n",
+      "7   183277          E. Hazard   27     Belgium       91         91   \n",
+      "8   177003          L. Modrić   32     Croatia       91         91   \n",
+      "9   182493           D. Godín   32     Uruguay       90         90   \n",
+      "10  188545     R. Lewandowski   29      Poland       90         90   \n",
+      "11  200389           J. Oblak   25    Slovenia       90         93   \n",
+      "12  182521           T. Kroos   28     Germany       90         90   \n",
+      "13  168542        David Silva   32       Spain       90         90   \n",
+      "14  215914           N. Kanté   27      France       89         90   \n",
       "\n",
-      "                                             Photo Nationality  \\\n",
-      "0   https://cdn.sofifa.org/players/4/19/158023.png   Argentina   \n",
-      "1    https://cdn.sofifa.org/players/4/19/20801.png    Portugal   \n",
-      "2   https://cdn.sofifa.org/players/4/19/190871.png      Brazil   \n",
-      "3   https://cdn.sofifa.org/players/4/19/193080.png       Spain   \n",
-      "4   https://cdn.sofifa.org/players/4/19/176580.png     Uruguay   \n",
-      "5   https://cdn.sofifa.org/players/4/19/192985.png     Belgium   \n",
-      "6   https://cdn.sofifa.org/players/4/19/155862.png       Spain   \n",
-      "7   https://cdn.sofifa.org/players/4/19/183277.png     Belgium   \n",
-      "8   https://cdn.sofifa.org/players/4/19/177003.png     Croatia   \n",
-      "9   https://cdn.sofifa.org/players/4/19/182493.png     Uruguay   \n",
-      "10  https://cdn.sofifa.org/players/4/19/188545.png      Poland   \n",
-      "11  https://cdn.sofifa.org/players/4/19/200389.png    Slovenia   \n",
-      "12  https://cdn.sofifa.org/players/4/19/182521.png     Germany   \n",
-      "13  https://cdn.sofifa.org/players/4/19/168542.png       Spain   \n",
-      "14  https://cdn.sofifa.org/players/4/19/215914.png      France   \n",
+      "                   Club  Value   Wage Preferred Foot  ...  Composure  Marking  \\\n",
+      "0          FC Barcelona  110.5  565.0           Left  ...       96.0     33.0   \n",
+      "1              Juventus   77.0  405.0          Right  ...       95.0     28.0   \n",
+      "2   Paris Saint-Germain  118.5  290.0          Right  ...       94.0     27.0   \n",
+      "3     Manchester United   72.0  260.0          Right  ...       68.0     15.0   \n",
+      "4          FC Barcelona   80.0  455.0          Right  ...       85.0     62.0   \n",
+      "5       Manchester City  102.0  355.0          Right  ...       88.0     68.0   \n",
+      "6           Real Madrid   51.0  380.0          Right  ...       82.0     87.0   \n",
+      "7               Chelsea   93.0  340.0          Right  ...       91.0     34.0   \n",
+      "8           Real Madrid   67.0  420.0          Right  ...       84.0     60.0   \n",
+      "9       Atlético Madrid   44.0  125.0          Right  ...       82.0     90.0   \n",
+      "10    FC Bayern München   77.0  205.0          Right  ...       86.0     34.0   \n",
+      "11      Atlético Madrid   68.0   94.0          Right  ...       70.0     27.0   \n",
+      "12          Real Madrid   76.5  355.0          Right  ...       85.0     72.0   \n",
+      "13      Manchester City   60.0  285.0           Left  ...       93.0     59.0   \n",
+      "14              Chelsea   63.0  225.0          Right  ...       85.0     90.0   \n",
       "\n",
-      "                                   Flag  Overall  Potential  \\\n",
-      "0   https://cdn.sofifa.org/flags/52.png       94         94   \n",
-      "1   https://cdn.sofifa.org/flags/38.png       94         94   \n",
-      "2   https://cdn.sofifa.org/flags/54.png       92         93   \n",
-      "3   https://cdn.sofifa.org/flags/45.png       91         93   \n",
-      "4   https://cdn.sofifa.org/flags/60.png       91         91   \n",
-      "5    https://cdn.sofifa.org/flags/7.png       91         92   \n",
-      "6   https://cdn.sofifa.org/flags/45.png       91         91   \n",
-      "7    https://cdn.sofifa.org/flags/7.png       91         91   \n",
-      "8   https://cdn.sofifa.org/flags/10.png       91         91   \n",
-      "9   https://cdn.sofifa.org/flags/60.png       90         90   \n",
-      "10  https://cdn.sofifa.org/flags/37.png       90         90   \n",
-      "11  https://cdn.sofifa.org/flags/44.png       90         93   \n",
-      "12  https://cdn.sofifa.org/flags/21.png       90         90   \n",
-      "13  https://cdn.sofifa.org/flags/45.png       90         90   \n",
-      "14  https://cdn.sofifa.org/flags/18.png       89         90   \n",
+      "    StandingTackle SlidingTackle GKDiving GKHandling  GKKicking GKPositioning  \\\n",
+      "0             28.0          26.0      6.0       11.0       15.0          14.0   \n",
+      "1             31.0          23.0      7.0       11.0       15.0          14.0   \n",
+      "2             24.0          33.0      9.0        9.0       15.0          15.0   \n",
+      "3             21.0          13.0     90.0       85.0       87.0          88.0   \n",
+      "4             45.0          38.0     27.0       25.0       31.0          33.0   \n",
+      "5             58.0          51.0     15.0       13.0        5.0          10.0   \n",
+      "6             92.0          91.0     11.0        8.0        9.0           7.0   \n",
+      "7             27.0          22.0     11.0       12.0        6.0           8.0   \n",
+      "8             76.0          73.0     13.0        9.0        7.0          14.0   \n",
+      "9             89.0          89.0      6.0        8.0       15.0           5.0   \n",
+      "10            42.0          19.0     15.0        6.0       12.0           8.0   \n",
+      "11            12.0          18.0     86.0       92.0       78.0          88.0   \n",
+      "12            79.0          69.0     10.0       11.0       13.0           7.0   \n",
+      "13            53.0          29.0      6.0       15.0        7.0           6.0   \n",
+      "14            91.0          85.0     15.0       12.0       10.0           7.0   \n",
       "\n",
-      "                   Club                                     Club Logo  ...  \\\n",
-      "0          FC Barcelona  https://cdn.sofifa.org/teams/2/light/241.png  ...   \n",
-      "1              Juventus   https://cdn.sofifa.org/teams/2/light/45.png  ...   \n",
-      "2   Paris Saint-Germain   https://cdn.sofifa.org/teams/2/light/73.png  ...   \n",
-      "3     Manchester United   https://cdn.sofifa.org/teams/2/light/11.png  ...   \n",
-      "4          FC Barcelona  https://cdn.sofifa.org/teams/2/light/241.png  ...   \n",
-      "5       Manchester City   https://cdn.sofifa.org/teams/2/light/10.png  ...   \n",
-      "6           Real Madrid  https://cdn.sofifa.org/teams/2/light/243.png  ...   \n",
-      "7               Chelsea    https://cdn.sofifa.org/teams/2/light/5.png  ...   \n",
-      "8           Real Madrid  https://cdn.sofifa.org/teams/2/light/243.png  ...   \n",
-      "9       Atlético Madrid  https://cdn.sofifa.org/teams/2/light/240.png  ...   \n",
-      "10    FC Bayern München   https://cdn.sofifa.org/teams/2/light/21.png  ...   \n",
-      "11      Atlético Madrid  https://cdn.sofifa.org/teams/2/light/240.png  ...   \n",
-      "12          Real Madrid  https://cdn.sofifa.org/teams/2/light/243.png  ...   \n",
-      "13      Manchester City   https://cdn.sofifa.org/teams/2/light/10.png  ...   \n",
-      "14              Chelsea    https://cdn.sofifa.org/teams/2/light/5.png  ...   \n",
+      "   GKReflexes Release Clause  \n",
+      "0         8.0          226.5  \n",
+      "1        11.0          127.1  \n",
+      "2        11.0          228.1  \n",
+      "3        94.0          138.6  \n",
+      "4        37.0          164.0  \n",
+      "5        13.0          196.4  \n",
+      "6        11.0          104.6  \n",
+      "7         8.0          172.1  \n",
+      "8         9.0          137.4  \n",
+      "9        15.0           90.2  \n",
+      "10       10.0          127.1  \n",
+      "11       89.0          144.5  \n",
+      "12       10.0          156.8  \n",
+      "13       12.0          111.0  \n",
+      "14       10.0          121.3  \n",
       "\n",
-      "    Composure  Marking StandingTackle  SlidingTackle  GKDiving  GKHandling  \\\n",
-      "0        96.0     33.0           28.0           26.0       6.0        11.0   \n",
-      "1        95.0     28.0           31.0           23.0       7.0        11.0   \n",
-      "2        94.0     27.0           24.0           33.0       9.0         9.0   \n",
-      "3        68.0     15.0           21.0           13.0      90.0        85.0   \n",
-      "4        85.0     62.0           45.0           38.0      27.0        25.0   \n",
-      "5        88.0     68.0           58.0           51.0      15.0        13.0   \n",
-      "6        82.0     87.0           92.0           91.0      11.0         8.0   \n",
-      "7        91.0     34.0           27.0           22.0      11.0        12.0   \n",
-      "8        84.0     60.0           76.0           73.0      13.0         9.0   \n",
-      "9        82.0     90.0           89.0           89.0       6.0         8.0   \n",
-      "10       86.0     34.0           42.0           19.0      15.0         6.0   \n",
-      "11       70.0     27.0           12.0           18.0      86.0        92.0   \n",
-      "12       85.0     72.0           79.0           69.0      10.0        11.0   \n",
-      "13       93.0     59.0           53.0           29.0       6.0        15.0   \n",
-      "14       85.0     90.0           91.0           85.0      15.0        12.0   \n",
-      "\n",
-      "   GKKicking GKPositioning GKReflexes  Release Clause  \n",
-      "0       15.0          14.0        8.0           226.5  \n",
-      "1       15.0          14.0       11.0           127.1  \n",
-      "2       15.0          15.0       11.0           228.1  \n",
-      "3       87.0          88.0       94.0           138.6  \n",
-      "4       31.0          33.0       37.0           164.0  \n",
-      "5        5.0          10.0       13.0           196.4  \n",
-      "6        9.0           7.0       11.0           104.6  \n",
-      "7        6.0           8.0        8.0           172.1  \n",
-      "8        7.0          14.0        9.0           137.4  \n",
-      "9       15.0           5.0       15.0            90.2  \n",
-      "10      12.0           8.0       10.0           127.1  \n",
-      "11      78.0          88.0       89.0           144.5  \n",
-      "12      13.0           7.0       10.0           156.8  \n",
-      "13       7.0           6.0       12.0           111.0  \n",
-      "14      10.0           7.0       10.0           121.3  \n",
-      "\n",
-      "[15 rows x 60 columns]\n"
+      "[15 rows x 57 columns]\n"
      ]
     }
    ],
    "source": [
     "# Data frame containing top 5 players by Overall rating for each unique position\n",
+    "\n",
     "top_5_by_position = (\n",
     "    fifa_df.sort_values('Overall', ascending=False)\n",
     "           .groupby('Position')\n",
@@ -898,7 +887,7 @@
     "           .reset_index(drop=True)\n",
     ")\n",
     "\n",
-    "print(top_5_by_position.head(15))\n"
+    "print(top_5_by_position.head(15))"
    ]
   },
   {
@@ -957,6 +946,7 @@
    ],
    "source": [
     "# Average wage for top 5 players in every position\n",
+    "\n",
     "avg_wage_by_position = top_5_by_position.groupby('Position')['Wage'].mean().sort_values(ascending=False)\n",
     "print(\"\\nAverage wage for top 5 players in every position:\")\n",
     "print(avg_wage_by_position)"
