--- a/PDS_Graded Assignment-1.ipynb
+++ b/PDS_Graded Assignment-1.ipynb
@@ -2,10 +2,75 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "51c6ec32-7aab-4865-9b70-59c502a59022",
+   "metadata": {},
+   "source": [
+    "# Graded Project"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b8be67d0-cc48-4b2d-85dc-ee83f7142bbf",
+   "metadata": {},
+   "source": [
+    "***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9ad25710-0cdf-4c9d-956c-9983bdfe991c",
+   "metadata": {},
+   "source": [
+    "## Context:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c3943849-b260-47f6-9760-a1a79a21f1ba",
+   "metadata": {},
+   "source": [
+    "### A new football club named ‘GL United FC’ has just been inaugurated. This club does not have a team yet. The team is looking to hire players for their roster.Management wants to make such decisions using a data based approach. During a recent hiring drive, you were selected for the Data Science team as a data scientist. Your team has been tasked with creating a report which recommends players for the main team. To start with, a total of 15 players are required. Player data for all teams has been acquired from FIFA. This data contains information about the players, the clubs they are currently playing for and various performance measures. The team needs 20 possible players to choose from. You have been requested to do the analysis and formulate a report in order to help the management make a decision regarding potential players."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "65b41e3f-ddd5-4772-aedb-d94137fb0b27",
+   "metadata": {},
+   "source": [
+    "## Dataset Description:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d3b9e565-f476-4217-90a4-3278b64089cb",
+   "metadata": {},
+   "source": [
+    "### The data contains details for over 18,000 players playing in various football clubs in Europe. It contains information on age, skill rating, wages and player value, etc. The files provided are as follows:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "179193e6-80e9-48dd-b2fd-93c413d19d46",
+   "metadata": {},
+   "source": [
+    "**fifa.csv** : data file <br>\n",
+    "**fifa_ variable_information.csv** : information on individual variables"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "65b7f699-fcec-47dd-b46f-95a2b5794850",
+   "metadata": {},
+   "source": [
+    "***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "f377e3b8-1cfc-4af4-809b-165811e5a79f",
    "metadata": {},
    "source": [
-    "# Load and explore data"
+    "## Load and explore data"
    ]
   },
   {
@@ -13,7 +78,7 @@
    "id": "352db901-a8df-4578-b8df-cd398e10b679",
    "metadata": {},
    "source": [
-    "## 1. Import the required libraries and read the dataset."
+    "### 1. Import the required libraries and read the dataset."
    ]
   },
   {
@@ -38,7 +103,7 @@
    "id": "ed85ef7e-e022-4090-8a4f-7382ed009c9b",
    "metadata": {},
    "source": [
-    "## 2. Check the first few samples, shape, info of the data and try to familiarize yourself with different features."
+    "### 2. Check the first few samples, shape, info of the data and try to familiarize yourself with different features."
    ]
   },
   {
@@ -179,8 +244,8 @@
    "id": "4cb08b35-af26-4e97-8f59-3a4e25c3271a",
    "metadata": {},
    "source": [
-    "## 3. Drop the columns which you think redundant for the analysis. \n",
-    "### [Hint: columns like 'Photo','Flag','Club Logo'}"
+    "### 3. Drop the columns which you think redundant for the analysis. \n",
+    "#### [Hint: columns like 'Photo','Flag','Club Logo'}"
    ]
   },
   {
@@ -201,7 +266,7 @@
    "id": "b2ddfa3b-7362-4778-a960-20400501ae33",
    "metadata": {},
    "source": [
-    "# Data Cleaning and Preprocessing"
+    "## Data Cleaning and Preprocessing"
    ]
   },
   {
@@ -209,10 +274,10 @@
    "id": "e072da61-74b5-4c2e-a732-65d864da4020",
    "metadata": {},
    "source": [
-    "## 4. Convert the columns \"Value\", \"Wage\", \"Release Clause\" to float datatype after getting rid of currency symbol and suffix.\n",
+    "### 4. Convert the columns \"Value\", \"Wage\", \"Release Clause\" to float datatype after getting rid of currency symbol and suffix.\n",
     "\n",
-    "### - Note: When the record/entry has \"M\"(indicates millions) as suffix you need to multiply that value with 1000000\n",
-    "### - When the record/entry has \"K\"(indicates thousands) as suffix you need to multiply that value with 1000\n"
+    "#### - Note: When the record/entry has \"M\"(indicates millions) as suffix you need to multiply that value with 1000000\n",
+    "#### - When the record/entry has \"K\"(indicates thousands) as suffix you need to multiply that value with 1000\n"
    ]
   },
   {
@@ -244,7 +309,7 @@
    "id": "a8a349c9-fec4-4e11-a170-26b87caddd49",
    "metadata": {},
    "source": [
-    "## 5. Convert the column \"Joined\" into integer data type with keeping only the year. (2 points)"
+    "### 5. Convert the column \"Joined\" into integer data type with keeping only the year."
    ]
   },
   {
@@ -264,7 +329,7 @@
    "id": "375c7cec-f8b2-41c8-b8ff-c50c24038bb8",
    "metadata": {},
    "source": [
-    "## 6. Convert the column \"Contract Valid Until\" to pandas datetime type. (2 points)"
+    "### 6. Convert the column \"Contract Valid Until\" to pandas datetime type."
    ]
   },
   {
@@ -299,7 +364,7 @@
    "id": "39b5ba27-b280-423a-83eb-37a2976c3726",
    "metadata": {},
    "source": [
-    "## 7. The column 'Height' is in inches with a quotation mark, Convert to float with decimal points. "
+    "### 7. The column 'Height' is in inches with a quotation mark, Convert to float with decimal points. "
    ]
   },
   {
@@ -342,7 +407,7 @@
    "id": "3fbc9d3c-7f99-48bd-a928-a43aff47a55b",
    "metadata": {},
    "source": [
-    "## 8. The column \"Weight\" has the suffix as lbs, remove the suffix and convert to float."
+    "### 8. The column \"Weight\" has the suffix as lbs, remove the suffix and convert to float."
    ]
   },
   {
@@ -362,7 +427,7 @@
    "id": "74fba065-06df-4f96-beef-fd9d8b206189",
    "metadata": {},
    "source": [
-    "## 9. Check for the percentage of missing values and impute them with appropriate imputation techniques. "
+    "### 9. Check for the percentage of missing values and impute them with appropriate imputation techniques. "
    ]
   },
   {
@@ -449,7 +514,7 @@
    "id": "a81e829a-a3c6-489e-9f5e-bab1b75dbaaf",
    "metadata": {},
    "source": [
-    "## 10. Plot the distribution of Overall rating for all the players and write your findings. "
+    "### 10. Plot the distribution of Overall rating for all the players and write your findings. "
    ]
   },
   {
@@ -485,7 +550,7 @@
    "id": "4f395ea3-e211-4ea0-abf7-cec5a49d678d",
    "metadata": {},
    "source": [
-    "## 11. Retrieve the names of top20 players based on the Overall rating."
+    "### 11. Retrieve the names of top20 players based on the Overall rating."
    ]
   },
   {
@@ -515,7 +580,7 @@
    "id": "49554ca6-7328-4654-b570-e02cba2c689d",
    "metadata": {},
    "source": [
-    "## 12. Generate a dataframe which should include all the information of the Top 20 players based on the Overall rating."
+    "### 12. Generate a dataframe which should include all the information of the Top 20 players based on the Overall rating."
    ]
   },
   {
@@ -535,7 +600,7 @@
    "id": "1a3912ec-b2e2-427a-bf04-59106df611e5",
    "metadata": {},
    "source": [
-    "## 13. What is the average \"Age\" and \"Wage\" of these top 20 players? (use the data frame created in the question 11)"
+    "### 13. What is the average \"Age\" and \"Wage\" of these top 20 players? (use the data frame created in the question 11)"
    ]
   },
   {
@@ -568,7 +633,7 @@
    "id": "bff1bcf9-e5c5-4bc3-a217-c99274d3b52b",
    "metadata": {},
    "source": [
-    "## 14. Among the top 20 players based on the Overall rating, which player has the highest wage? Display the name of the player with his wage. "
+    "### 14. Among the top 20 players based on the Overall rating, which player has the highest wage? Display the name of the player with his wage. "
    ]
   },
   {
@@ -600,10 +665,10 @@
    "id": "fc4644cd-3ff9-4c85-8325-d290b91d19c2",
    "metadata": {},
    "source": [
-    "## 15. Generate a dataframe which should include the \"Player name\", \"Club Name\", \"Wage\", and 'Overall rating'.\n",
+    "### 15. Generate a dataframe which should include the \"Player name\", \"Club Name\", \"Wage\", and 'Overall rating'.\n",
     "\n",
-    "### i) find the average Overall rating for each club.\n",
-    "### ii) Display the average overall rating of Top10 Clubs using a plot"
+    "#### i) find the average Overall rating for each club.\n",
+    "#### ii) Display the average overall rating of Top10 Clubs using a plot"
    ]
   },
   {
@@ -645,7 +710,7 @@
    "id": "72c7501e-35ce-4a24-a197-35ab22b247f2",
    "metadata": {},
    "source": [
-    "## 16. What is the relationship between age and individual potential of the player? Visualize the relationship with appropriate plot and Comment on the same. "
+    "### 16. What is the relationship between age and individual potential of the player? Visualize the relationship with appropriate plot and Comment on the same. "
    ]
   },
   {
@@ -679,9 +744,9 @@
    "id": "b2f6b78c-8909-4263-b3bc-5a60420f6f8e",
    "metadata": {},
    "source": [
-    "## 17. Which features directly contribute to the wages of the players? Support your answer with a plot and a metric.\n",
+    "### 17. Which features directly contribute to the wages of the players? Support your answer with a plot and a metric.\n",
     "\n",
-    "### (hint: use potential, Overall, value, international reputation, and Release Clause)"
+    "#### (hint: use potential, Overall, value, international reputation, and Release Clause)"
    ]
   },
   {
@@ -757,7 +822,7 @@
    "id": "47772e86-ff81-43ba-9c4f-b09dd81c6473",
    "metadata": {},
    "source": [
-    "## 19. How many players are from the club 'Juventus' and the wage is greater than 200K? Display all the information of such players."
+    "### 19. How many players are from the club 'Juventus' and the wage is greater than 200K? Display all the information of such players."
    ]
   },
   {
@@ -792,7 +857,7 @@
    "id": "55e77115-dc09-4767-8c8d-1a77f5925b65",
    "metadata": {},
    "source": [
-    "## 20. Generate a data frame containing top 5 players by Overall rating for each unique position."
+    "### 20. Generate a data frame containing top 5 players by Overall rating for each unique position."
    ]
   },
   {
@@ -895,9 +960,9 @@
    "id": "9f9ebd0b-a2a1-4a26-aa5e-895d0781f6b3",
    "metadata": {},
    "source": [
-    "## 21. What is the average wage one can expect to pay for the top 5 players in every position? \n",
+    "### 21. What is the average wage one can expect to pay for the top 5 players in every position? \n",
     "\n",
-    "### (use the data frame created in Q19)"
+    "#### (use the data frame created in Q19)"
    ]
   },
   {
